--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
-    "axios": "^1.9.0",
+    "antd": "^5.26.0",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
